--- a/src/assets/styles/variaveis.scss
+++ b/src/assets/styles/variaveis.scss
@@ -1,2 +1,6 @@
-$cor-fundo: #FBFEF4;
+$cor-fundo: #0b0b0b;
 $cor-primaria: #37AB00;
+$cor-fundo-secundaria: rgb(255, 255, 255, 0.84);
+$cor-sombra: rgb(255, 255, 255, 0.1);
+$cor-texto: #ffffff;
+$cor-texto-secundario: #b3b3b3
