--- a/src/assets/styles/variaveis.scss
+++ b/src/assets/styles/variaveis.scss
@@ -1,6 +1,6 @@
 $cor-fundo: #0b0b0b;
+$cor-fundo-secundaria: rgba(255, 255, 255, 0.04);
 $cor-primaria: #37AB00;
-$cor-fundo-secundaria: rgb(255, 255, 255, 0.84);
-$cor-sombra: rgb(255, 255, 255, 0.1);
+$cor-sombra: rgba(255, 255, 255, 0.1);
 $cor-texto: #ffffff;
-$cor-texto-secundario: #b3b3b3
+$cor-texto-secundario: #b3b3b3;
